# SwordLibrary

./: .gitignore  settings.gradle.kts
ActivityTest/: .project
ActivityTest/app/: .project  build.gradle
Android-yg/AndroidAnimation/: settings.gradle
Android-yg/AndroidHandler/: settings.gradle
Android-yg/AndroidIPCyg/: settings.gradle
Android-yg/AndroidLayout_yg/: settings.gradle
AppWidgetTest/: settings.gradle
BluetoothPratice/: settings.gradle
ContentProviderTest/: settings.gradle
CoordinatorLayoutTest/: .project  settings.gradle
GeekTimeKotlin/: test.html
HencoderSourceCode/: build.gradle  settings.gradle  version.properties
JetpackPratice/: settings.gradle
MotionLayout/: build.gradle  settings.gradle
OkHttpPractice/: settings.gradle
OpenSourceFramework/: settings.gradle
PracticeProject/: local.properties
SwordDemoLibrary/: .gitignore  build.gradle  gradle.properties  settings.gradle
SwordLibrary/: settings.gradle.kts
TransitionPratice/: .project  settings.gradle
UtilClass/: BitmapUtils.java
app/: build.gradle.kts  proguard-rules.pro
gradle/: libs.versions.toml
gradlescript/: utils.gradle  utils.gradle.kts
keystore/: sword.jks  sword.txt  sworddebug.jks  sworddebug.txt
logger/: build.gradle.kts
nativelearning/: build.gradle.kts
nativelearning/src/main/cpp/: CMakeLists.txt  nativelearning.cpp
nativelearning/src/main/cpp/utils/: Utils.cpp  Utils.h  android_trace.cpp  android_trace.h
script/: ChangeApkInfo.java  apkchanger_config.exe4j  script1.groovy  tool.exe4j
utils/: build.gradle.kts
(+2079 files in other folders)
